Refactor SupportCommand implementation and update OtoboService zum Verbessern des ticket creation process.